# VieNeu-TTS

./: pyproject.toml
.github/workflows/: ci.yml
apps/: gradio_main.py  gradio_xpu.py  ui_constants.py  ui_utils.py
src/vieneu/: base.py  turbo.py  v3turbo.py
src/vieneu_utils/: phonemize_text.py
